# sdl_roge

./: .gitmodules  CMakeLists.txt  README.md  build.bat  test.bat
src/: CMakeLists.txt  main.cpp
src/maps/: cell.cpp  cell.h
src/ui/: ui.h
src/units/: cell_holder.h  unit.h
src/utils/: console.cpp  console.h  coords.cpp  coords.h  headers.h  log.h  random.h  subscriber.cpp  subscriber.h  templateCash.hpp
tests/: CMakeLists.txt  test_cash.cpp  test_main.cpp
